# Hisui

./: README.md  insomnia.json  tech.md
backend/: .env.example  .env.test.example  docker-compose.yml  dockerfile  package-lock.json  package.json  vitest.config.ts
backend/prisma/: schema.prisma
backend/prisma/migrations/20250910192621_create_user_model/: migration.sql
backend/prisma/migrations/20250911115422_add_validation_email_fields/: migration.sql
backend/prisma/migrations/20251025210533_add_portfolio_assets_and_orders_models/: migration.sql
backend/src/: routes.ts  server.ts
backend/src/@types/: fastify.d.ts
backend/src/config/: server.test.ts
backend/src/middlewares/: admin-middleware.ts  auth-middleware.ts
backend/src/models/: asset-model.ts  crypto-model.ts  news-model.ts  order-model.ts  portfolio-model.ts  stock-model.ts  user-model.ts  user-preferences-model.ts
backend/src/routes/: admin-routes.ts  assets-routes.ts  crypto-routes.ts  index.ts  machine-routes.ts  news-routes.ts  order-routes.ts  portfolio-routes.ts  stocks-routes.ts  user-routes.ts
backend/src/tests/: auth-user.test.ts  create-user.test.ts  delete-user.test.ts  reset-password.test.ts  view-user-informations.test.ts
machine/: .env.example  pyproject.toml  run_server.py
machine/app/: main.py
machine/app/api/: routes.py
machine/app/models/petr4/src/models/: predictor.py
machine/app/models/petr4/src/services/: prediction_service.py
machine/app/models/petr4/src/utils/: data_collector.py  feature_engineer.py
machine/app/tests/: test_api.py
(+150 files in other folders)
